updated About, Highlights, Skills

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -423,6 +423,15 @@ section {
 /*--------------------------------------------------------------
 # Akills
 --------------------------------------------------------------*/
+.text-center {
+  text-align: center!important;
+}
+
+.col-12{
+  flex: 0 0 auto;
+  width: 100%;
+}
+
 .skills .progress {
   height: 60px;
   display: block;
@@ -452,6 +461,14 @@ section {
   background-color: #0563bb;
 }
 
+/*--------------------------------------------------------------
+# Highlights
+--------------------------------------------------------------*/
+.carousel-item{
+  width: 400px;
+  height: 300px;
+  object-fit: scale-down;
+}
 /*--------------------------------------------------------------
 # Resume
 --------------------------------------------------------------*/
