--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -464,10 +464,16 @@ section {
 /*--------------------------------------------------------------
 # Highlights
 --------------------------------------------------------------*/
+.carousel-inner{
+  width: 100%;
+  height: calc(100vh - 60px);
+  object-fit: cover;
+}
+
 .carousel-item{
-  width: 400px;
-  height: 300px;
-  object-fit: scale-down;
+  width: 100%;
+  height:calc(100vh - 60px);
+  object-fit: cover;
 }
 /*--------------------------------------------------------------
 # Resume
